--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
   <canvas id="canvas" width="800" height="480"></canvas>
   <script src="Player.js"></script>
+  <script src="Obstacle.js"></script>
+  <script src="Spawner.js"></script>
   <script src="Game.js"></script>
   <script src="Display.js"></script>
   <script src="index.js"></script>
