Pixel level collision detection

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 </head>
 <body>
   <canvas id="canvas" width="800" height="480"></canvas>
+  <script src="utils.js"></script>
+  <script src="Display.js"></script>
+  <script src="Sprite.js"></script>
   <script src="Player.js"></script>
   <script src="Obstacle.js"></script>
   <script src="Spawner.js"></script>
   <script src="Game.js"></script>
-  <script src="Display.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
